--- a/date/2025-07/index.htm
+++ b/date/2025-07/index.htm
@@ -137,6 +137,34 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-07-31">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-7-31-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/c8e6376117c27d8b3bcf0302b91cbd97.webp" alt="免费Clash SSR - 7月31日21.2M/S|免费Shadowrocket/Clash/V2ray/SSR节点订阅分享" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-7-31-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        免费Clash SSR - 7月31日21.2M/S|免费Shadowrocket/Clash/V2ray/SSR节点订阅分享                                    </h3>
+                                </a>
+                                <p>这一次的节点更新覆盖了欧洲、美国、韩国、加拿大、日本、新加坡、香港等地区,最高速度可达21.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-07-30">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-7-30-node-share.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/c94474226b24ec9caf8b44f650d14f51.webp" alt="免费Clash SSR - 7月30日22.9M/S|免费V2ray/Shadowrocket/SSR/Clash节点订阅分享" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-7-30-node-share.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        免费Clash SSR - 7月30日22.9M/S|免费V2ray/Shadowrocket/SSR/Clash节点订阅分享                                    </h3>
+                                </a>
+                                <p>这一次的节点更新覆盖了香港、新加坡、日本、韩国、美国、欧洲、加拿大等地区,最高速度可达22.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-07-29">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-7-29-free-subscribe-node.htm" class="xcblog-blog-url">
@@ -249,34 +277,6 @@
                                 <p>这一次的节点更新覆盖了美国、日本、香港、加拿大、新加坡、欧洲、韩国等地区,最高速度可达21.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
                             </div>
                         </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-07-21">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-7-21-node-share.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240825-1/3632c734aaea8d83684bbb1178b44c3b.webp" alt="免费Clash SSR - 7月21日19.6M/S|免费SSR/Clash/Shadowrocket/V2ray节点订阅分享" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-7-21-node-share.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        免费Clash SSR - 7月21日19.6M/S|免费SSR/Clash/Shadowrocket/V2ray节点订阅分享                                    </h3>
-                                </a>
-                                <p>这一次的节点更新覆盖了美国、香港、韩国、加拿大、新加坡、日本、欧洲等地区,最高速度可达19.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-07-20">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-7-20-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240825-1/246d752b0cd257f4d6be3a247a8989a4.webp" alt="免费Clash SSR - 7月20日22.5M/S|免费V2ray/SSR/Shadowrocket/Clash节点订阅分享" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-7-20-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        免费Clash SSR - 7月20日22.5M/S|免费V2ray/SSR/Shadowrocket/Clash节点订阅分享                                    </h3>
-                                </a>
-                                <p>这一次的节点更新覆盖了加拿大、香港、韩国、美国、日本、新加坡、欧洲等地区,最高速度可达22.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                            </div>
-                        </div>
                         
                         <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/date/2025-07/page-2.htm">2</a></li><li><a href="/date/2025-07/page-3.htm">3</a></li> <li><a href="/date/2025-07/page-2.htm">&raquo;</a></li></ul>                    </div>
                 </div>
@@ -287,16 +287,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-7-25-free-subscribe-node.htm" title="免费Clash SSR - 7月25日18.1M/S|免费Clash/V2ray/SSR/Shadowrocket节点订阅分享">免费Clash SSR - 7月25日18.1M/S|免费Clash/V2ray/SSR/Shadowrocket节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-16-free-high-speed-nodes.htm" title="免费Clash SSR - 7月16日19.8M/S|免费SSR/Clash/V2ray/Shadowrocket节点订阅分享">免费Clash SSR - 7月16日19.8M/S|免费SSR/Clash/V2ray/Shadowrocket节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-13-free-v2ray-subscribe.htm" title="免费Clash SSR - 6月13日19.8M/S|免费Clash/Shadowrocket/V2ray/SSR节点订阅分享">免费Clash SSR - 6月13日19.8M/S|免费Clash/Shadowrocket/V2ray/SSR节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-7-15-free-node-subscribe-links.htm" title="免费Clash SSR - 7月15日22.2M/S|免费Shadowrocket/SSR/Clash/V2ray节点订阅分享">免费Clash SSR - 7月15日22.2M/S|免费Shadowrocket/SSR/Clash/V2ray节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-29-free-v2ray-subscribe.htm" title="免费Clash SSR - 6月29日18.2M/S|免费SSR/V2ray/Clash/Shadowrocket节点订阅分享">免费Clash SSR - 6月29日18.2M/S|免费SSR/V2ray/Clash/Shadowrocket节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-9-free-v2ray-subscribe.htm" title="免费Clash SSR - 7月9日18.5M/S|免费Shadowrocket/SSR/Clash/V2ray节点订阅分享">免费Clash SSR - 7月9日18.5M/S|免费Shadowrocket/SSR/Clash/V2ray节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-15-node-share-links.htm" title="免费Clash SSR - 6月15日21.6M/S|免费Shadowrocket/V2ray/Clash/SSR节点订阅分享">免费Clash SSR - 6月15日21.6M/S|免费Shadowrocket/V2ray/Clash/SSR节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-22-free-high-speed-nodes.htm" title="免费Clash SSR - 6月22日22.4M/S|免费V2ray/Clash/SSR/Shadowrocket节点订阅分享">免费Clash SSR - 6月22日22.4M/S|免费V2ray/Clash/SSR/Shadowrocket节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-26-node-share.htm" title="免费Clash SSR - 6月26日18M/S|免费Shadowrocket/V2ray/Clash/SSR节点订阅分享">免费Clash SSR - 6月26日18M/S|免费Shadowrocket/V2ray/Clash/SSR节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-8-free-node-subscribe.htm" title="免费Clash SSR - 7月8日18.9M/S|免费SSR/Clash/Shadowrocket/V2ray节点订阅分享">免费Clash SSR - 7月8日18.9M/S|免费SSR/Clash/Shadowrocket/V2ray节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-13-free-v2ray-subscribe.htm" title="免费Clash SSR - 6月13日19.8M/S|免费Clash/Shadowrocket/V2ray/SSR节点订阅分享">免费Clash SSR - 6月13日19.8M/S|免费Clash/Shadowrocket/V2ray/SSR节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-24-node-share.htm" title="免费Clash SSR - 7月24日19.2M/S|免费Shadowrocket/SSR/Clash/V2ray节点订阅分享">免费Clash SSR - 7月24日19.2M/S|免费Shadowrocket/SSR/Clash/V2ray节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-2-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 8月2日19.9M/S|免费Clash/SSR/Shadowrocket/V2ray节点订阅分享">免费Clash SSR - 8月2日19.9M/S|免费Clash/SSR/Shadowrocket/V2ray节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-16-free-high-speed-nodes.htm" title="免费Clash SSR - 7月16日19.8M/S|免费SSR/Clash/V2ray/Shadowrocket节点订阅分享">免费Clash SSR - 7月16日19.8M/S|免费SSR/Clash/V2ray/Shadowrocket节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-12-free-node-subscribe.htm" title="免费Clash SSR - 6月12日22.5M/S|免费Shadowrocket/SSR/Clash/V2ray节点订阅分享">免费Clash SSR - 6月12日22.5M/S|免费Shadowrocket/SSR/Clash/V2ray节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-19-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 6月19日22.8M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享">免费Clash SSR - 6月19日22.8M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-7-free-v2ray.htm" title="免费Clash SSR - 7月7日22.4M/S|免费SSR/Clash/Shadowrocket/V2ray节点订阅分享">免费Clash SSR - 7月7日22.4M/S|免费SSR/Clash/Shadowrocket/V2ray节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-10-free-node-subscribe.htm" title="免费Clash SSR - 7月10日18.9M/S|免费SSR/V2ray/Shadowrocket/Clash节点订阅分享">免费Clash SSR - 7月10日18.9M/S|免费SSR/V2ray/Shadowrocket/Clash节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-12-node-share.htm" title="免费Clash SSR - 7月12日21.5M/S|免费SSR/V2ray/Shadowrocket/Clash节点订阅分享">免费Clash SSR - 7月12日21.5M/S|免费SSR/V2ray/Shadowrocket/Clash节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -308,7 +308,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
+                <h4><span class="badge" style="float: right;">3</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">21</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
