--- a/date/2025-07/page-3.htm
+++ b/date/2025-07/page-3.htm
@@ -137,6 +137,34 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-07-11">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-7-11-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/89df7d5f1d1d06955b7a34df1ca4e644.webp" alt="免费Clash SSR - 7月11日20.9M/S|免费Clash/Shadowrocket/V2ray/SSR节点订阅分享" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-7-11-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        免费Clash SSR - 7月11日20.9M/S|免费Clash/Shadowrocket/V2ray/SSR节点订阅分享                                    </h3>
+                                </a>
+                                <p>这一次的节点更新覆盖了韩国、日本、美国、加拿大、欧洲、香港、新加坡等地区,最高速度可达20.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-07-10">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-7-10-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/3632c734aaea8d83684bbb1178b44c3b.webp" alt="免费Clash SSR - 7月10日18.9M/S|免费SSR/V2ray/Shadowrocket/Clash节点订阅分享" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-7-10-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        免费Clash SSR - 7月10日18.9M/S|免费SSR/V2ray/Shadowrocket/Clash节点订阅分享                                    </h3>
+                                </a>
+                                <p>这一次的节点更新覆盖了欧洲、韩国、日本、香港、加拿大、新加坡、美国等地区,最高速度可达18.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-07-09">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-7-9-free-v2ray-subscribe.htm" class="xcblog-blog-url">
@@ -245,16 +273,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-6-30-node-share-links.htm" title="免费Clash SSR - 6月30日18.6M/S|免费Clash/SSR/Shadowrocket/V2ray节点订阅分享">免费Clash SSR - 6月30日18.6M/S|免费Clash/SSR/Shadowrocket/V2ray节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-12-free-node-subscribe.htm" title="免费Clash SSR - 6月12日22.5M/S|免费Shadowrocket/SSR/Clash/V2ray节点订阅分享">免费Clash SSR - 6月12日22.5M/S|免费Shadowrocket/SSR/Clash/V2ray节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-17-node-share.htm" title="免费Clash SSR - 6月17日19.1M/S|免费V2ray/SSR/Shadowrocket/Clash节点订阅分享">免费Clash SSR - 6月17日19.1M/S|免费V2ray/SSR/Shadowrocket/Clash节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-9-free-v2ray-subscribe.htm" title="免费Clash SSR - 7月9日18.5M/S|免费Shadowrocket/SSR/Clash/V2ray节点订阅分享">免费Clash SSR - 7月9日18.5M/S|免费Shadowrocket/SSR/Clash/V2ray节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-14-node-share.htm" title="免费Clash SSR - 6月14日19.1M/S|免费V2ray/SSR/Shadowrocket/Clash节点订阅分享">免费Clash SSR - 6月14日19.1M/S|免费V2ray/SSR/Shadowrocket/Clash节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-7-12-node-share.htm" title="免费Clash SSR - 7月12日21.5M/S|免费SSR/V2ray/Shadowrocket/Clash节点订阅分享">免费Clash SSR - 7月12日21.5M/S|免费SSR/V2ray/Shadowrocket/Clash节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-16-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 6月16日21.7M/S|免费SSR/Clash/V2ray/Shadowrocket节点订阅分享">免费Clash SSR - 6月16日21.7M/S|免费SSR/Clash/V2ray/Shadowrocket节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-25-free-subscribe-node.htm" title="免费Clash SSR - 7月25日18.1M/S|免费Clash/V2ray/SSR/Shadowrocket节点订阅分享">免费Clash SSR - 7月25日18.1M/S|免费Clash/V2ray/SSR/Shadowrocket节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-7-7-free-v2ray.htm" title="免费Clash SSR - 7月7日22.4M/S|免费SSR/Clash/Shadowrocket/V2ray节点订阅分享">免费Clash SSR - 7月7日22.4M/S|免费SSR/Clash/Shadowrocket/V2ray节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-8-free-node-subscribe.htm" title="免费Clash SSR - 7月8日18.9M/S|免费SSR/Clash/Shadowrocket/V2ray节点订阅分享">免费Clash SSR - 7月8日18.9M/S|免费SSR/Clash/Shadowrocket/V2ray节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-17-free-v2ray-subscribe.htm" title="免费Clash SSR - 7月17日21.3M/S|免费Clash/V2ray/SSR/Shadowrocket节点订阅分享">免费Clash SSR - 7月17日21.3M/S|免费Clash/V2ray/SSR/Shadowrocket节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-18-free-v2ray.htm" title="免费Clash SSR - 6月18日23M/S|免费Shadowrocket/V2ray/SSR/Clash节点订阅分享">免费Clash SSR - 6月18日23M/S|免费Shadowrocket/V2ray/SSR/Clash节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-21-node-share.htm" title="免费Clash SSR - 7月21日19.6M/S|免费SSR/Clash/Shadowrocket/V2ray节点订阅分享">免费Clash SSR - 7月21日19.6M/S|免费SSR/Clash/Shadowrocket/V2ray节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-19-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 6月19日22.8M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享">免费Clash SSR - 6月19日22.8M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-27-free-v2ray-subscribe.htm" title="免费Clash SSR - 6月27日19.6M/S|免费Clash/Shadowrocket/SSR/V2ray节点订阅分享">免费Clash SSR - 6月27日19.6M/S|免费Clash/Shadowrocket/SSR/V2ray节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-24-node-share.htm" title="免费Clash SSR - 6月24日20.3M/S|免费V2ray/Shadowrocket/SSR/Clash节点订阅分享">免费Clash SSR - 6月24日20.3M/S|免费V2ray/Shadowrocket/SSR/Clash节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-22-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 7月22日21.5M/S|免费Clash/SSR/Shadowrocket/V2ray节点订阅分享">免费Clash SSR - 7月22日21.5M/S|免费Clash/SSR/Shadowrocket/V2ray节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-14-node-share.htm" title="免费Clash SSR - 7月14日19.8M/S|免费V2ray/SSR/Shadowrocket/Clash节点订阅分享">免费Clash SSR - 7月14日19.8M/S|免费V2ray/SSR/Shadowrocket/Clash节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -266,7 +294,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
+                <h4><span class="badge" style="float: right;">3</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">21</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
