--- a/free-nodes/2025-7-28-free-subscribe-node.htm
+++ b/free-nodes/2025-7-28-free-subscribe-node.htm
@@ -199,16 +199,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-6-23-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 6月23日18.1M/S|免费Clash/V2ray/Shadowrocket/SSR节点订阅分享">免费Clash SSR - 6月23日18.1M/S|免费Clash/V2ray/Shadowrocket/SSR节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-11-free-v2ray-subscribe.htm" title="免费Clash SSR - 6月11日21.1M/S|免费V2ray/Shadowrocket/Clash/SSR节点订阅分享">免费Clash SSR - 6月11日21.1M/S|免费V2ray/Shadowrocket/Clash/SSR节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-12-node-share.htm" title="免费Clash SSR - 7月12日21.5M/S|免费SSR/V2ray/Shadowrocket/Clash节点订阅分享">免费Clash SSR - 7月12日21.5M/S|免费SSR/V2ray/Shadowrocket/Clash节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-10-free-node-subscribe.htm" title="免费Clash SSR - 7月10日18.9M/S|免费SSR/V2ray/Shadowrocket/Clash节点订阅分享">免费Clash SSR - 7月10日18.9M/S|免费SSR/V2ray/Shadowrocket/Clash节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-17-node-share.htm" title="免费Clash SSR - 6月17日19.1M/S|免费V2ray/SSR/Shadowrocket/Clash节点订阅分享">免费Clash SSR - 6月17日19.1M/S|免费V2ray/SSR/Shadowrocket/Clash节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-28-node-share.htm" title="免费Clash SSR - 6月28日19.7M/S|免费SSR/Clash/V2ray/Shadowrocket节点订阅分享">免费Clash SSR - 6月28日19.7M/S|免费SSR/Clash/V2ray/Shadowrocket节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-16-free-high-speed-nodes.htm" title="免费Clash SSR - 7月16日19.8M/S|免费SSR/Clash/V2ray/Shadowrocket节点订阅分享">免费Clash SSR - 7月16日19.8M/S|免费SSR/Clash/V2ray/Shadowrocket节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-27-free-node-subscribe.htm" title="免费Clash SSR - 7月27日18.7M/S|免费Clash/Shadowrocket/V2ray/SSR节点订阅分享">免费Clash SSR - 7月27日18.7M/S|免费Clash/Shadowrocket/V2ray/SSR节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-24-node-share.htm" title="免费Clash SSR - 6月24日20.3M/S|免费V2ray/Shadowrocket/SSR/Clash节点订阅分享">免费Clash SSR - 6月24日20.3M/S|免费V2ray/Shadowrocket/SSR/Clash节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-26-free-high-speed-nodes.htm" title="免费Clash SSR - 7月26日18.4M/S|免费Shadowrocket/Clash/V2ray/SSR节点订阅分享">免费Clash SSR - 7月26日18.4M/S|免费Shadowrocket/Clash/V2ray/SSR节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-22-free-high-speed-nodes.htm" title="免费Clash SSR - 6月22日22.4M/S|免费V2ray/Clash/SSR/Shadowrocket节点订阅分享">免费Clash SSR - 6月22日22.4M/S|免费V2ray/Clash/SSR/Shadowrocket节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-17-free-v2ray-subscribe.htm" title="免费Clash SSR - 7月17日21.3M/S|免费Clash/V2ray/SSR/Shadowrocket节点订阅分享">免费Clash SSR - 7月17日21.3M/S|免费Clash/V2ray/SSR/Shadowrocket节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-7-19-free-node-subscribe.htm" title="免费Clash SSR - 7月19日21.4M/S|免费SSR/Clash/V2ray/Shadowrocket节点订阅分享">免费Clash SSR - 7月19日21.4M/S|免费SSR/Clash/V2ray/Shadowrocket节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-12-free-node-subscribe.htm" title="免费Clash SSR - 6月12日22.5M/S|免费Shadowrocket/SSR/Clash/V2ray节点订阅分享">免费Clash SSR - 6月12日22.5M/S|免费Shadowrocket/SSR/Clash/V2ray节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-16-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 6月16日21.7M/S|免费SSR/Clash/V2ray/Shadowrocket节点订阅分享">免费Clash SSR - 6月16日21.7M/S|免费SSR/Clash/V2ray/Shadowrocket节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-20-free-high-speed-nodes.htm" title="免费Clash SSR - 7月20日22.5M/S|免费V2ray/SSR/Shadowrocket/Clash节点订阅分享">免费Clash SSR - 7月20日22.5M/S|免费V2ray/SSR/Shadowrocket/Clash节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-19-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 6月19日22.8M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享">免费Clash SSR - 6月19日22.8M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-10-free-node-subscribe.htm" title="免费Clash SSR - 7月10日18.9M/S|免费SSR/V2ray/Shadowrocket/Clash节点订阅分享">免费Clash SSR - 7月10日18.9M/S|免费SSR/V2ray/Shadowrocket/Clash节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-25-free-v2ray.htm" title="免费Clash SSR - 6月25日22M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享">免费Clash SSR - 6月25日22M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -220,7 +220,10 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
+                <h4><span class="badge" style="float: right;">3</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">21</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
