--- a/privacy.htm
+++ b/privacy.htm
@@ -189,16 +189,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-6-27-free-v2ray-subscribe.htm" title="免费Clash SSR - 6月27日19.6M/S|免费Clash/Shadowrocket/SSR/V2ray节点订阅分享">免费Clash SSR - 6月27日19.6M/S|免费Clash/Shadowrocket/SSR/V2ray节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-12-node-share.htm" title="免费Clash SSR - 7月12日21.5M/S|免费SSR/V2ray/Shadowrocket/Clash节点订阅分享">免费Clash SSR - 7月12日21.5M/S|免费SSR/V2ray/Shadowrocket/Clash节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-18-free-v2ray.htm" title="免费Clash SSR - 6月18日23M/S|免费Shadowrocket/V2ray/SSR/Clash节点订阅分享">免费Clash SSR - 6月18日23M/S|免费Shadowrocket/V2ray/SSR/Clash节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-19-free-node-subscribe.htm" title="免费Clash SSR - 7月19日21.4M/S|免费SSR/Clash/V2ray/Shadowrocket节点订阅分享">免费Clash SSR - 7月19日21.4M/S|免费SSR/Clash/V2ray/Shadowrocket节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-10-free-node-subscribe.htm" title="免费Clash SSR - 7月10日18.9M/S|免费SSR/V2ray/Shadowrocket/Clash节点订阅分享">免费Clash SSR - 7月10日18.9M/S|免费SSR/V2ray/Shadowrocket/Clash节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-26-node-share.htm" title="免费Clash SSR - 6月26日18M/S|免费Shadowrocket/V2ray/Clash/SSR节点订阅分享">免费Clash SSR - 6月26日18M/S|免费Shadowrocket/V2ray/Clash/SSR节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-29-free-subscribe-node.htm" title="免费Clash SSR - 7月29日18.8M/S|免费V2ray/SSR/Shadowrocket/Clash节点订阅分享">免费Clash SSR - 7月29日18.8M/S|免费V2ray/SSR/Shadowrocket/Clash节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-10-free-high-speed-nodes.htm" title="免费Clash SSR - 6月10日22.6M/S|免费Shadowrocket/V2ray/Clash/SSR节点订阅分享">免费Clash SSR - 6月10日22.6M/S|免费Shadowrocket/V2ray/Clash/SSR节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-25-free-v2ray.htm" title="免费Clash SSR - 6月25日22M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享">免费Clash SSR - 6月25日22M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-15-node-share-links.htm" title="免费Clash SSR - 6月15日21.6M/S|免费Shadowrocket/V2ray/Clash/SSR节点订阅分享">免费Clash SSR - 6月15日21.6M/S|免费Shadowrocket/V2ray/Clash/SSR节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-6-21-free-v2ray.htm" title="免费Clash SSR - 6月21日20.6M/S|免费Shadowrocket/V2ray/SSR/Clash节点订阅分享">免费Clash SSR - 6月21日20.6M/S|免费Shadowrocket/V2ray/SSR/Clash节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-6-free-v2ray.htm" title="免费Clash SSR - 7月6日22.4M/S|免费Clash/V2ray/SSR/Shadowrocket节点订阅分享">免费Clash SSR - 7月6日22.4M/S|免费Clash/V2ray/SSR/Shadowrocket节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-24-node-share.htm" title="免费Clash SSR - 6月24日20.3M/S|免费V2ray/Shadowrocket/SSR/Clash节点订阅分享">免费Clash SSR - 6月24日20.3M/S|免费V2ray/Shadowrocket/SSR/Clash节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-1-free-node-subscribe-links.htm" title="免费Clash SSR - 8月1日20.8M/S|免费Clash/V2ray/Shadowrocket/SSR节点订阅分享">免费Clash SSR - 8月1日20.8M/S|免费Clash/V2ray/Shadowrocket/SSR节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-23-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 6月23日18.1M/S|免费Clash/V2ray/Shadowrocket/SSR节点订阅分享">免费Clash SSR - 6月23日18.1M/S|免费Clash/V2ray/Shadowrocket/SSR节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-27-free-node-subscribe.htm" title="免费Clash SSR - 7月27日18.7M/S|免费Clash/Shadowrocket/V2ray/SSR节点订阅分享">免费Clash SSR - 7月27日18.7M/S|免费Clash/Shadowrocket/V2ray/SSR节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-31-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 7月31日21.2M/S|免费Shadowrocket/Clash/V2ray/SSR节点订阅分享">免费Clash SSR - 7月31日21.2M/S|免费Shadowrocket/Clash/V2ray/SSR节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-17-node-share.htm" title="免费Clash SSR - 6月17日19.1M/S|免费V2ray/SSR/Shadowrocket/Clash节点订阅分享">免费Clash SSR - 6月17日19.1M/S|免费V2ray/SSR/Shadowrocket/Clash节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-30-node-share-links.htm" title="免费Clash SSR - 6月30日18.6M/S|免费Clash/SSR/Shadowrocket/V2ray节点订阅分享">免费Clash SSR - 6月30日18.6M/S|免费Clash/SSR/Shadowrocket/V2ray节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -210,7 +210,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
+                <h4><span class="badge" style="float: right;">3</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">21</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
